fixed a horizontal scroll bug on mobile view

--- a/css/project-card.css
+++ b/css/project-card.css
@@ -92,6 +92,10 @@
         width: 100%;
     }
 
+    .project-card-content {
+        padding: 1rem 0;
+    }
+
     .project-card-image {
         aspect-ratio: 16/9;
     }
